src/parser/KdsMarkdownParser.js
// Generated from src/grammar/KdsMarkdown.g4 by ANTLR 4.13.0
// jshint ignore: start
import antlr4 from 'antlr4';
import KdsMarkdownListener from './KdsMarkdownListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class KdsMarkdownParser extends antlr4.Parser {

    static grammarFileName = "KdsMarkdown.g4";
    static literalNames = [ null, "'\\n'", "'#'", "'*'", "' '", "'_'", "'['", 
                            "']'", "'('", "')'", "'>'", "'\\t'", "'\\r'", 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, "'!'", "'\"'", null, 
                            "'$'", "'%'", "'&'", "'''", null, null, null, 
                            "'+'", "','", "'-'", "'.'", "'/'", "'0'", "'1'", 
                            "'2'", "'3'", "'4'", "'5'", "'6'", "'7'", "'8'", 
                            "'9'", "':'", "';'", "'<'", "'='", null, "'?'", 
                            "'@'", "'A'", "'B'", "'C'", "'D'", "'E'", "'F'", 
                            "'G'", "'H'", "'I'", "'J'", "'K'", "'L'", "'M'", 
                            "'N'", "'O'", "'P'", "'Q'", "'R'", "'S'", "'T'", 
                            "'U'", "'V'", "'W'", "'X'", "'Y'", "'Z'", null, 
                            "'\\'", null, "'^'", null, "'`'", "'a'", "'b'", 
                            "'c'", "'d'", "'e'", "'f'", "'g'", "'h'", "'i'", 
                            "'j'", "'k'", "'l'", "'m'", "'n'", "'o'", "'p'", 
                            "'q'", "'r'", "'s'", "'t'", "'u'", "'v'", "'w'", 
                            "'x'", "'y'", "'z'", "'{'", "'|'", "'}'", "'~'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, "'!'", "'\"'", null, "'$'", "'%'", "'&'", 
                             "'''", null, null, null, "'+'", "','", "'-'", 
                             "'.'", "'/'", "'0'", "'1'", "'2'", "'3'", "'4'", 
                             "'5'", "'6'", "'7'", "'8'", "'9'", "':'", "';'", 
                             "'<'", "'='", null, "'?'", "'@'", "'A'", "'B'", 
                             "'C'", "'D'", "'E'", "'F'", "'G'", "'H'", "'I'", 
                             "'J'", "'K'", "'L'", "'M'", "'N'", "'O'", "'P'", 
                             "'Q'", "'R'", "'S'", "'T'", "'U'", "'V'", "'W'", 
                             "'X'", "'Y'", "'Z'", null, "'\\'", null, "'^'", 
                             null, "'`'", "'a'", "'b'", "'c'", "'d'", "'e'", 
                             "'f'", "'g'", "'h'", "'i'", "'j'", "'k'", "'l'", 
                             "'m'", "'n'", "'o'", "'p'", "'q'", "'r'", "'s'", 
                             "'t'", "'u'", "'v'", "'w'", "'x'", "'y'", "'z'", 
                             "'{'", "'|'", "'}'", "'~'" ];
    static ruleNames = [ "file", "elem", "header", "para", "paraContent", 
                         "bold", "astericks", "underscore", "italics", "link", 
                         "quote", "quoteElem", "list", "listElem", "text", 
                         "ws", "nl" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = KdsMarkdownParser.ruleNames;
        this.literalNames = KdsMarkdownParser.literalNames;
        this.symbolicNames = KdsMarkdownParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 4:
    	    		return this.paraContent_sempred(localctx, predIndex);
    	case 6:
    	    		return this.astericks_sempred(localctx, predIndex);
    	case 11:
    	    		return this.quoteElem_sempred(localctx, predIndex);
    	case 13:
    	    		return this.listElem_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    paraContent_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return _input.LA(2)!='\n'&&_input.LA(2)!=Token.EOF;
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    astericks_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 1:
    			return _input.LT(1).column!=0;
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    quoteElem_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 2:
    			return _input.LT(1).column==0;
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    listElem_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 3:
    			return _input.LT(1).column==0;
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	file() {
	    let localctx = new FileContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, KdsMarkdownParser.RULE_file);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 37;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,0,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 34;
	                this.match(KdsMarkdownParser.T__0); 
	            }
	            this.state = 39;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,0,this._ctx);
	        }

	        this.state = 41; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 40;
	        		this.elem();
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 43; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,1, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	        this.state = 45;
	        this.match(KdsMarkdownParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	elem() {
	    let localctx = new ElemContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, KdsMarkdownParser.RULE_elem);
	    console.error(_input.LT(1));
	    try {
	        this.state = 52;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 47;
	            this.header();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 48;
	            this.para();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 49;
	            this.quote();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 50;
	            this.list();
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 51;
	            this.match(KdsMarkdownParser.T__0);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	header() {
	    let localctx = new HeaderContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, KdsMarkdownParser.RULE_header);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 55; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 54;
	        		this.match(KdsMarkdownParser.T__1);
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 57; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,3, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	        this.state = 62;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 4294967292) !== 0) || ((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 4294967295) !== 0) || ((((_la - 64)) & ~0x1f) === 0 && ((1 << (_la - 64)) & 4294967295) !== 0) || ((((_la - 96)) & ~0x1f) === 0 && ((1 << (_la - 96)) & 2147483647) !== 0)) {
	            this.state = 59;
	            _la = this._input.LA(1);
	            if(_la<=0 || _la===1) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 64;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 65;
	        this.match(KdsMarkdownParser.T__0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	para() {
	    let localctx = new ParaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, KdsMarkdownParser.RULE_para);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 70;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,5,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 67;
	                this.match(KdsMarkdownParser.T__0); 
	            }
	            this.state = 72;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,5,this._ctx);
	        }

	        this.state = 73;
	        this.paraContent();
	        this.state = 74;
	        this.match(KdsMarkdownParser.T__0);
	        this.state = 77;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 1:
	        case 12:
	            this.state = 75;
	            this.nl();
	            break;
	        case -1:
	            this.state = 76;
	            this.match(KdsMarkdownParser.EOF);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	paraContent() {
	    let localctx = new ParaContentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, KdsMarkdownParser.RULE_paraContent);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 87; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 87;
	        		this._errHandler.sync(this);
	        		var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
	        		switch(la_) {
	        		case 1:
	        		    this.state = 79;
	        		    this.text();
	        		    break;

	        		case 2:
	        		    this.state = 80;
	        		    this.bold();
	        		    break;

	        		case 3:
	        		    this.state = 81;
	        		    this.italics();
	        		    break;

	        		case 4:
	        		    this.state = 82;
	        		    this.link();
	        		    break;

	        		case 5:
	        		    this.state = 83;
	        		    this.astericks();
	        		    break;

	        		case 6:
	        		    this.state = 84;
	        		    this.underscore();
	        		    break;

	        		case 7:
	        		    this.state = 85;
	        		    if (!( _input.LA(2)!='\n'&&_input.LA(2)!=Token.EOF)) {
	        		        throw new antlr4.error.FailedPredicateException(this, "_input.LA(2)!='\\n'&&_input.LA(2)!=Token.EOF");
	        		    }
	        		    this.state = 86;
	        		    this.match(KdsMarkdownParser.T__0);
	        		    break;

	        		}
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 89; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,8, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	bold() {
	    let localctx = new BoldContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, KdsMarkdownParser.RULE_bold);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 91;
	        this.match(KdsMarkdownParser.T__2);
	        this.state = 92;
	        _la = this._input.LA(1);
	        if(_la<=0 || _la===1 || _la===4) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 93;
	        this.text();
	        this.state = 94;
	        this.match(KdsMarkdownParser.T__2);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	astericks() {
	    let localctx = new AstericksContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, KdsMarkdownParser.RULE_astericks);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 96;
	        if (!( _input.LT(1).column!=0)) {
	            throw new antlr4.error.FailedPredicateException(this, "_input.LT(1).column!=0");
	        }
	        this.state = 97;
	        this.ws();
	        this.state = 98;
	        this.match(KdsMarkdownParser.T__2);
	        this.state = 99;
	        this.ws();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	underscore() {
	    let localctx = new UnderscoreContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, KdsMarkdownParser.RULE_underscore);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 101;
	        this.ws();
	        this.state = 102;
	        this.match(KdsMarkdownParser.T__4);
	        this.state = 103;
	        this.ws();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	italics() {
	    let localctx = new ItalicsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, KdsMarkdownParser.RULE_italics);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 105;
	        this.match(KdsMarkdownParser.T__4);
	        this.state = 106;
	        _la = this._input.LA(1);
	        if(_la<=0 || _la===1 || _la===4) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 107;
	        this.text();
	        this.state = 108;
	        this.match(KdsMarkdownParser.T__4);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	link() {
	    let localctx = new LinkContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, KdsMarkdownParser.RULE_link);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 110;
	        this.match(KdsMarkdownParser.T__5);
	        this.state = 111;
	        this.text();
	        this.state = 112;
	        this.match(KdsMarkdownParser.T__6);
	        this.state = 113;
	        this.match(KdsMarkdownParser.T__7);
	        this.state = 117;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 4294966782) !== 0) || ((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 4294967295) !== 0) || ((((_la - 64)) & ~0x1f) === 0 && ((1 << (_la - 64)) & 4294967295) !== 0) || ((((_la - 96)) & ~0x1f) === 0 && ((1 << (_la - 96)) & 2147483647) !== 0)) {
	            this.state = 114;
	            _la = this._input.LA(1);
	            if(_la<=0 || _la===9) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 119;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 120;
	        this.match(KdsMarkdownParser.T__8);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	quote() {
	    let localctx = new QuoteContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, KdsMarkdownParser.RULE_quote);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 123; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 122;
	        		this.quoteElem();
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 125; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,10, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	        this.state = 127;
	        this.nl();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	quoteElem() {
	    let localctx = new QuoteElemContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, KdsMarkdownParser.RULE_quoteElem);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 129;
	        if (!( _input.LT(1).column==0)) {
	            throw new antlr4.error.FailedPredicateException(this, "_input.LT(1).column==0");
	        }
	        this.state = 130;
	        this.match(KdsMarkdownParser.T__9);
	        this.state = 134;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 4294967292) !== 0) || ((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 4294967295) !== 0) || ((((_la - 64)) & ~0x1f) === 0 && ((1 << (_la - 64)) & 4294967295) !== 0) || ((((_la - 96)) & ~0x1f) === 0 && ((1 << (_la - 96)) & 2147483647) !== 0)) {
	            this.state = 131;
	            _la = this._input.LA(1);
	            if(_la<=0 || _la===1) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 136;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 137;
	        this.match(KdsMarkdownParser.T__0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	list() {
	    let localctx = new ListContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, KdsMarkdownParser.RULE_list);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 140; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 139;
	        		this.listElem();
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 142; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,12, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	        this.state = 144;
	        this.nl();
	        this.state = 145;
	        this.nl();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	listElem() {
	    let localctx = new ListElemContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, KdsMarkdownParser.RULE_listElem);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 147;
	        if (!( _input.LT(1).column==0)) {
	            throw new antlr4.error.FailedPredicateException(this, "_input.LT(1).column==0");
	        }
	        this.state = 155;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===4) {
	            this.state = 148;
	            this.match(KdsMarkdownParser.T__3);
	            this.state = 153;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===4) {
	                this.state = 149;
	                this.match(KdsMarkdownParser.T__3);
	                this.state = 151;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	                if(_la===4) {
	                    this.state = 150;
	                    this.match(KdsMarkdownParser.T__3);
	                }

	            }

	        }

	        this.state = 157;
	        this.match(KdsMarkdownParser.T__2);
	        this.state = 158;
	        this.ws();
	        this.state = 159;
	        this.paraContent();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	text() {
	    let localctx = new TextContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, KdsMarkdownParser.RULE_text);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 162; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 161;
	        		_la = this._input.LA(1);
	        		if(_la<=0 || (((_la) & ~0x1f) === 0 && ((1 << _la) & 1262) !== 0)) {
	        		this._errHandler.recoverInline(this);
	        		}
	        		else {
	        			this._errHandler.reportMatch(this);
	        		    this.consume();
	        		}
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 164; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,16, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ws() {
	    let localctx = new WsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, KdsMarkdownParser.RULE_ws);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 167; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 166;
	        		_la = this._input.LA(1);
	        		if(!(_la===4 || _la===11)) {
	        		this._errHandler.recoverInline(this);
	        		}
	        		else {
	        			this._errHandler.reportMatch(this);
	        		    this.consume();
	        		}
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 169; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,17, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	nl() {
	    let localctx = new NlContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, KdsMarkdownParser.RULE_nl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 172;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===12) {
	            this.state = 171;
	            this.match(KdsMarkdownParser.T__11);
	        }

	        this.state = 174;
	        this.match(KdsMarkdownParser.T__0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

KdsMarkdownParser.EOF = antlr4.Token.EOF;
KdsMarkdownParser.T__0 = 1;
KdsMarkdownParser.T__1 = 2;
KdsMarkdownParser.T__2 = 3;
KdsMarkdownParser.T__3 = 4;
KdsMarkdownParser.T__4 = 5;
KdsMarkdownParser.T__5 = 6;
KdsMarkdownParser.T__6 = 7;
KdsMarkdownParser.T__7 = 8;
KdsMarkdownParser.T__8 = 9;
KdsMarkdownParser.T__9 = 10;
KdsMarkdownParser.T__10 = 11;
KdsMarkdownParser.T__11 = 12;

KdsMarkdownParser.RULE_file = 0;
KdsMarkdownParser.RULE_elem = 1;
KdsMarkdownParser.RULE_header = 2;
KdsMarkdownParser.RULE_para = 3;
KdsMarkdownParser.RULE_paraContent = 4;
KdsMarkdownParser.RULE_bold = 5;
KdsMarkdownParser.RULE_astericks = 6;
KdsMarkdownParser.RULE_underscore = 7;
KdsMarkdownParser.RULE_italics = 8;
KdsMarkdownParser.RULE_link = 9;
KdsMarkdownParser.RULE_quote = 10;
KdsMarkdownParser.RULE_quoteElem = 11;
KdsMarkdownParser.RULE_list = 12;
KdsMarkdownParser.RULE_listElem = 13;
KdsMarkdownParser.RULE_text = 14;
KdsMarkdownParser.RULE_ws = 15;
KdsMarkdownParser.RULE_nl = 16;

class FileContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = KdsMarkdownParser.RULE_file;
    }

	EOF() {
	    return this.getToken(KdsMarkdownParser.EOF, 0);
	};

	elem = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ElemContext);
	    } else {
	        return this.getTypedRuleContext(ElemContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof KdsMarkdownListener ) {
	        listener.enterFile(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof KdsMarkdownListener ) {
	        listener.exitFile(this);
		}
	}


}



class ElemContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = KdsMarkdownParser.RULE_elem;
    }

	header() {
	    return this.getTypedRuleContext(HeaderContext,0);
	};

	para() {
	    return this.getTypedRuleContext(ParaContext,0);
	};

	quote() {
	    return this.getTypedRuleContext(QuoteContext,0);
	};

	list() {
	    return this.getTypedRuleContext(ListContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof KdsMarkdownListener ) {
	        listener.enterElem(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof KdsMarkdownListener ) {
	        listener.exitElem(this);
		}
	}


}



class HeaderContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = KdsMarkdownParser.RULE_header;
    }


	enterRule(listener) {
	    if(listener instanceof KdsMarkdownListener ) {
	        listener.enterHeader(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof KdsMarkdownListener ) {
	        listener.exitHeader(this);
		}
	}


}



class ParaContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = KdsMarkdownParser.RULE_para;
    }
